# vale2junit

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-alpine  README.md
src/: cli.rs  csv.rs  junit.rs  logging.rs  main.rs  report.rs  vale.rs
